--- a/site/index.html
+++ b/site/index.html
@@ -1,13 +1,11 @@
-<!doctypeHTML>
+<!DOCTYPE html>
 <html>
 <head>
-<title>
-Prva strana
-</title>
-
+<meta charset="utf-8">
+<title>Prva strana</title>
 </head>
 <body>
-<h1>First page</h1>
+First page
 
 </body>
 </html>
