--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Prva strana</title>
+  <meta charset="utf-8">
+  <title>Prva strana</title>
 </head>
 <body>
-First page
-
+  First page
+  sec  page
 </body>
 </html>
