--- a/site/index.html
+++ b/site/index.html
@@ -3,9 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>Prva strana</title>
+  <style>
+
+
+}
+p{position: relative;
+top:70px;
+left:50px;
+background-color: grey;}
+  </style>
 </head>
 <body>
-
-
-</body>
-</html>
+<p>
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehe cr. E
+</p>
